fix(material/api-theme): fix nav items hover/focus contrast (#1004)
- fix hover and focus indicators on header nav items to have sufficient contrast

Fixes #759

--- a/material.angular.io/src/app/shared/navbar/_navbar-theme.scss
+++ b/material.angular.io/src/app/shared/navbar/_navbar-theme.scss
@@ -13,6 +13,15 @@
 
     .docs-navbar, .docs-navbar-header {
       background: mat.get-color-from-palette($primary);
+
+      & a:hover, & a:focus {
+        background: rgba(0, 0, 0, 0.4);
+        color: mat.get-color-from-palette($accent, 200);
+      }
+
+      .docs-navbar-header-item-selected {
+        background: rgba(0, 0, 0, 0.2);
+      }
     }
   }
 }
